--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord-menus",
-  "version": "1.0.",
+  "version": "1.0.8",
   "description": "Create beautiful menus in Discord, with ease!",
   "main": "./src/index.ts",
   "directories": {
